fix: full-view on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,6 +154,11 @@ nav {
   }
 }
 
+@media (max-width: 768px) {
+  main {
+    margin: 10px;
+  }
+}
 @supports not (backdrop-filter: none) {
   .sticky-nav {
     backdrop-filter: none;
